==> shkolnick-kun/bugurtos/arch/avr/gcc-vsmp/bugurt_port.c <==
#include <bugurt.h>
#include <util/delay.h>

void bgrt_set_curr_sp(void)
{
    if (vm_int_enabled[current_vm])
    {
        if (BGRT_KBLOCK.hpmap      ||
            BGRT_KBLOCK.vic.list.map ||
            BGRT_KBLOCK.lpmap)
        {
            kernel_mode[current_vm] = 1;
        }

    }

    if (kernel_mode[current_vm])
    {
        current_sp = &kernel_sp[current_vm];
    }
    else
    {
        current_sp = &BGRT_CURR_PROC->spointer;
    }
}

bgrt_st_t bgrt_syscall(bgrt_syscall_t num, void * arg)
{
    BGRT_USPD_T udata;
    udata = BGRT_GET_USPD();
    cli();
    udata->scnum = num;
    udata->scarg = arg;
    vm_int_enabled[current_vm]=1;
    bgrt_switch_to_kernel();
    return udata->scret;
}

static void _BGRT_SYSTEM_TIMER_ISR(void)
{
    current_vm++;
    if (current_vm >= BGRT_MAX_CPU)current_vm = (bgrt_cpuid_t)0;

    systimer_hook_counter++;
    if (systimer_hook_counter >= BGRT_CONFIG_SYSTIMER_HOOK_THR)
    {
        systimer_hook_counter = (bgrt_cnt_t)0;
        bgrt_vint_push_isr(&int_systick, &BGRT_KBLOCK.vic);
    }
}

void BGRT_SYSTEM_TIMER_ISR(void)
{
    BGRT_ISR_START();
    _BGRT_SYSTEM_TIMER_ISR();
    BGRT_ISR_END();
}

void bgrt_init(void)
{
    bgrt_cpuid_t i;
    cli();
    vm_int_enabled[0]=0;
    kernel_mode[0] = 1;
    for (i = 1; i < BGRT_MAX_CPU; i++)
    {
        vm_int_enabled[i]=0;
        kernel_mode[i] = 1;
        kernel_sp[i] = bgrt_proc_stack_init(
                           &kernel_stack[i-1][VM_STACK_SIZE - 1],
                           (bgrt_code_t)_idle_main,
                           (void *)0,
                           (void(*)(void))_kernel_panic
                       );
    }
    sei();
    bgrt_vint_init(&int_systick, BGRT_PRIO_LOWEST, (bgrt_code_t)do_int_systick, (void *)0);
    bgrt_kernel_init();
}

void bgrt_start(void)
{
    bgrt_cpuid_t i;
    cli();
    vm_int_enabled[0]=1;
    kernel_mode[0] = 1;
    for (i = 1; i < BGRT_MAX_CPU; i++)
    {
        vm_int_enabled[i]=1;
        kernel_mode[i] = 1;
        kernel_sp[i] = bgrt_proc_stack_init(
                           &kernel_stack[i-1][VM_STACK_SIZE - 1],
                           (bgrt_code_t)bgrt_kblock_main,
                           (void *)&bgrt_kernel.kblock[i],
                           (void(*)(void))_kernel_panic
                       );
    }
    sei();
    bgrt_kblock_main(&bgrt_kernel.kblock[0]);
}
