==> shkolnick-kun/bugurtos/arch/rp2040/gcc/bugurt_port.c <==
#include <bugurt.h>
#define BGRT_SYS_ICSR 	*((volatile unsigned long *) 0xE000ED04)
#define BGRT_SYS_VTOR 	*((volatile unsigned long *) 0xE000ED08)
#define BGRT_SYS_SCR 		*((volatile unsigned long *) 0xE000ED10)
#define BGRT_SYS_CCR 		*((volatile unsigned long *) 0xE000ED14)
#define BGRT_SYS_SHPR1 	*((volatile unsigned long *) 0xE000ED18)
#define BGRT_SYS_SHPR2 	*((volatile unsigned long *) 0xE000ED1C)
#define BGRT_SYS_SHPR3 	*((volatile unsigned long *) 0xE000ED20)
#define BGRT_SYS_SHCRS 	*((volatile unsigned long *) 0xE000ED24)
#define BGRT_SYS_CFSR 	*((volatile unsigned long *) 0xE000ED28)
#define BGRT_SYST_CSR 	*((volatile unsigned long *) 0xE000E010)
#define BGRT_SYST_RVR 	*((volatile unsigned long *) 0xE000E014)
#define BGRT_NVIC_ISER  *((volatile unsigned long *) 0xE000E100)
#define BGRT_NVIC_ICER  *((volatile unsigned long *) 0xE000E180)
#define BGRT_NVIC_ICPR  *((volatile unsigned long *) 0xE000E280)
#define BGRT_SYST_RVR_VALUE ((BGRT_CONFIG_FCPU_HZ / BGRT_CONFIG_FSYSTICK_HZ)- 1ul)
#define BGRT_SYST_CSR_VALUE (0x00000007)/* Enable clock, interrupt, timer. */
#define BGRT_PENDSV_SET   (0x10000000)
#define BGRT_PENDSV_CLR   (0x08000000)
#define BGRT_SIO_IRQ_CORE0 (0x00008000)
#define BGRT_SIO_IRQ_CORE1 (0x00010000)
#define BGRT_SIO_CPUID   *((volatile unsigned long *)0xD0000000)
#define BGRT_SIO_FIFO_ST *((volatile unsigned long *)0xD0000050) /*Status*/
#define BGRT_SIO_FIFO_WR *((volatile unsigned long *)0xD0000054) /*Read*/

void BGRT_SYSTEM_TIMER_ISR(void)
{
    BGRT_ISR_START();

    BGRT_SPIN_LOCK(&bgrt_kernel.timer);
    bgrt_kernel.timer.val++;
    if (bgrt_kernel.timer.tick)
    {
        bgrt_kernel.timer.tick();
    }
    BGRT_SPIN_FREE(&bgrt_kernel.timer);

    bgrt_atm_bset(&BGRT_KBLOCK.lpmap, BGRT_KBLOCK_VTMR); /* Interrupts are enabled on Cortex-Mx */
    _sio_send(BGRT_KBLOCK_VTMR); /*Send event to the core1*/

    BGRT_ISR_END();
}

void bgrt_init(void)
{
    BGRT_INT_LOCK();
    bgrt_kernel_init();
    /* Устанавливаем начальное значение PSP, для потока Ядра; */
    _write_psp((volatile bgrt_stack_t *)&bugurt_kernel_core0_stack[16]); /* !!! Внимательно смотрим на границы!!! */
    /* Устанавливаем приоритеты обработчиков прерываний; */
    BGRT_SYS_SHPR3 |= (BGRT_CONFIG_SCHED_PRIO  << (8 - BGRT_CONFIG_PRIO_BITS)) << 16; /* PendSV */
    BGRT_SYS_SHPR3 |= (BGRT_CONFIG_SCHED_PRIO  << (8 - BGRT_CONFIG_PRIO_BITS)) << 24; /* SysTick */
    /* Настраиваем системный таймер и приоритет его прерывания */
    BGRT_SYST_RVR = BGRT_SYST_RVR_VALUE;
    BGRT_SYST_CSR = BGRT_SYST_CSR_VALUE;
}

void bgrt_start(void)
{
    _bgrt_start_core1();
    BGRT_INT_FREE();
    bgrt_kblock_main(&BGRT_KBLOCK);
}

bgrt_st_t bgrt_syscall(bgrt_syscall_t num, void * arg)
{
    BGRT_USPD_T udata;

    BGRT_INT_LOCK();

    udata = BGRT_GET_USPD();
    udata->scnum = num;
    udata->scarg = arg;

    BGRT_ATM_BSET_ISR(&BGRT_KBLOCK.lpmap, BGRT_KBLOCK_VSCALL);

    BGRT_SYS_ICSR |= BGRT_PENDSV_SET;
    BGRT_INT_FREE();

    return udata->scret;
}

static void bgrt_set_curr_sp(void)
{
    if (BGRT_KBLOCK.hpmap      ||
#ifdef BGRT_CONFIG_USE_VIC
        BGRT_KBLOCK.vic.list.map ||
#endif/*BGRT_CONFIG_USE_VIC*/
        BGRT_KBLOCK.lpmap)
    {
        kernel_mode[BGRT_SIO_CPUID] = 1;
    }

    if (kernel_mode[BGRT_SIO_CPUID])
    {
        current_sp[BGRT_SIO_CPUID] = &kernel_sp[BGRT_SIO_CPUID];
    }
    else
    {
        current_sp[BGRT_SIO_CPUID] = &BGRT_CURR_PROC->spointer;
    }
}
